--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "micromatch": "^2.3.7",
     "node-dir": "0.1.8",
     "nomnom": "^1.8.1",
-    "recast": "^0.12.5",
+    "recast": "elliottsj/recast#typescript-initial",
     "temp": "^0.8.1",
     "write-file-atomic": "^1.2.0"
   },
